<resources>
    <string name="app_name">校招平台</string>
    <string name="title_date">招聘日历</string>
    <string name="title_home">我的简历</string>
    <string name="title_job">找工作</string>
    <string name="title_dashboard">面试指导</string>
    <string name="title_notifications">我的</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pick_csv_file">Add CSV table from your phone memory and you can read and edit it.</string>
    <string name="pick_csv_or_demo_file">打开CSV文件或使用我们的模板（DEMO）编辑</string>
    <string name="pick_file">选择CSV文件</string>
    <string name="demo">Demo</string>
    <!-- edit song dialog -->
    <string name="edit_song">编辑</string>
    <string name="settings">设置</string>
    <string name="settings_fixed_header">固定标题模式</string>
    <string name="settings_rtl_direction">Rtl direction</string>
    <string name="settings_drag_and_drop_enabled">行列是否可拖动</string>
    <string name="settings_solid_row">Solid Row</string>
    <string name="position">Position</string>
    <string name="photo_url">Photo url</string>
    <string name="artist_name">Artist name</string>
    <string name="album_name">Album name</string>
    <string name="song">Song</string>
    <string name="genres">Genres</string>
    <string name="time">Time</string>
    <string name="chart_number">WLS on chart</string>
    <string name="votes">Votes count</string>

    <string name="rock">Rock</string>
    <string name="r_and_b">R&amp;B</string>
    <string name="pop">Pop</string>
    <string name="jazz">Jazz</string>
    <string name="hip_hop">Hip hop</string>
    <string name="electronic">Electronic</string>
    <string name="blues">Blues</string>
    <string name="country">Country</string>


    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="artists_header">Artists</string>
    <string name="save">发布</string>

    <string name="changes_saved">所有更改已经保存</string>
    <string name="unexpected_error">未知错误</string>
    <string name="no_such_file_error">没有该csv文件</string>
    <string name="not_csv_file_error">没有csv文件</string>
    <string name="delete_row">删除行</string>
    <string name="add_row">添加行</string>
    <string name="add_above_row">添加在该行上面</string>
    <string name="add_below_row">添加在该行下面</string>

    <string name="want_to_delete">确定要删除？</string>
    <string name="add_column">添加列</string>
    <string name="delete_column">删除列</string>
    <string name="add_column_left">添加在该列左边</string>
    <string name="add_column_right">添加在该列右边</string>
    <string name="message">这需要一些时间</string>

    <string name="hint_enter_a_message">请输入消息~</string>
    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>

    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string-array name="google_glyph_strings">
        <item>M142.9,24.2C97.6,39.7,59,73.6,37.5,116.5c-7.5,14.8-12.9,30.5-16.2,46.8c-8.2,40.4-2.5,83.5,16.1,120.3   c12.1,24,29.5,45.4,50.5,62.1c19.9,15.8,43,27.6,67.6,34.1c31,8.3,64,8.1,95.2,1c28.2-6.5,54.9-20,76.2-39.6   c22.5-20.7,38.6-47.9,47.1-77.2c9.3-31.9,10.5-66,4.7-98.8c-58.3,0-116.7,0-175,0c0,24.2,0,48.4,0,72.6c33.8,0,67.6,0,101.4,0   c-3.9,23.2-17.7,44.4-37.2,57.5c-12.3,8.3-26.4,13.6-41,16.2c-14.6,2.5-29.8,2.8-44.4-0.1c-14.9-3-29-9.2-41.4-17.9   c-19.8-13.9-34.9-34.2-42.6-57.1c-7.9-23.3-8-49.2,0-72.4c5.6-16.4,14.8-31.5,27-43.9c15-15.4,34.5-26.4,55.6-30.9   c18-3.8,37-3.1,54.6,2.2c15,4.5,28.8,12.8,40.1,23.6c11.4-11.4,22.8-22.8,34.2-34.2c6-6.1,12.3-12,18.1-18.3   c-17.3-16-37.7-28.9-59.9-37.1C228.2,10.6,183.2,10.3,142.9,24.2z</item>
        <item>M142.9,24.2c40.2-13.9,85.3-13.6,125.3,1.1c22.2,8.2,42.5,21,59.9,37.1c-5.8,6.3-12.1,12.2-18.1,18.3    c-11.4,11.4-22.8,22.8-34.2,34.2c-11.3-10.8-25.1-19-40.1-23.6c-17.6-5.3-36.6-6.1-54.6-2.2c-21,4.5-40.5,15.5-55.6,30.9    c-12.2,12.3-21.4,27.5-27,43.9c-20.3-15.8-40.6-31.5-61-47.3C59,73.6,97.6,39.7,142.9,24.2z</item>
        <item>M21.4,163.2c3.3-16.2,8.7-32,16.2-46.8c20.3,15.8,40.6,31.5,61,47.3c-8,23.3-8,49.2,0,72.4    c-20.3,15.8-40.6,31.6-60.9,47.3C18.9,246.7,13.2,203.6,21.4,163.2z</item>
        <item>M203.7,165.1c58.3,0,116.7,0,175,0c5.8,32.7,4.5,66.8-4.7,98.8c-8.5,29.3-24.6,56.5-47.1,77.2    c-19.7-15.3-39.4-30.6-59.1-45.9c19.5-13.1,33.3-34.3,37.2-57.5c-33.8,0-67.6,0-101.4,0C203.7,213.5,203.7,189.3,203.7,165.1z</item>
        <item>M37.5,283.5c20.3-15.7,40.6-31.5,60.9-47.3c7.8,22.9,22.8,43.2,42.6,57.1c12.4,8.7,26.6,14.9,41.4,17.9    c14.6,3,29.7,2.6,44.4,0.1c14.6-2.6,28.7-7.9,41-16.2c19.7,15.3,39.4,30.6,59.1,45.9c-21.3,19.7-48,33.1-76.2,39.6    c-31.2,7.1-64.2,7.3-95.2-1c-24.6-6.5-47.7-18.2-67.6-34.1C67,328.9,49.6,307.5,37.5,283.5z</item>
    </string-array>
</resources>
